Update font to Golos Text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <title>When will I have $1 million?</title>
   <script type="module" src="./src/index.js"></script>
-  <link href="./css/style.css" rel="stylesheet" type="text/css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&family=Work+Sans:ital@0;1&display=swap" rel="stylesheet">
+  <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
